my_lab/kubernetes/cka-practice-lab/manifests/multi-container-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kucc8
spec:
  containers:
    - image: nginx
      name: nginx
    - image: redis
      name: redis
